--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "adler32cs": "github:chick307/adler32cs.js",
     "cf-blob.js": "0.0.1",
     "filesaver.js": "github:andyinabox/FileSaver.js",
-    "jspdf": "^2.5.1"
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28"
   },
   "devDependencies": {
     "babel-preset-es2015-rollup": "^1.1.1",
